--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_KEY="<your-api-key>"
 IDEOGRAM_API_KEY="<your-ideogram-api-key>"
 SUPABASE_URL="your-supabase-project-url"
 SUPABASE_ANON_KEY="your-supabase-anon-key"
+SEGMIND_API_KEY="<your-segmind-api-key>"
